<resources>
    <string name="app_name">patientmgt</string>
    <string name="welcome_to_this_application">Welcome to this application</string>
    <string name="next_of_kin_s_phone">Next of Kin\'s Phone</string>
    <string name="full_names">Full Names :</string>
    <string name="email">Email :</string>
    <string name="phone_number">Phone Number :</string>
    <string name="age">Age :</string>
    <string name="marital_status">Marital Status :</string>
    <string name="number_of_children">Number of children :</string>
    <string name="insuarance_used">Insuarance Used :</string>
    <string name="id_number">ID Number :</string>
    <string name="allergies">Allergies :</string>
    <string name="medication">Medication :</string>
    <string name="next_of_kin_phone">Next of Kin\'s Phone:</string>

    <string-array name="timeframes">
        <item>Select you are time available</item>
        <item>7 – 9 AM</item>
        <item>9 – 11 AM</item>
        <item>11 – 1 PM</item>
        <item>2 – 4 PM</item>
        <item>4 – 6 PM</item>

    </string-array>

    <string-array name="departments">
        <item>Select departments</item>
        <item>Dentistry</item>
        <item>Surgery</item>
        <item>Optical</item>

    </string-array>

    <string-array name="specialization">
        <item>Select specialization</item>
        <item>General</item>
        <item>Periodontist</item>

    </string-array>

    <string-array name="Insurance">
        <item>Select used insurance</item>
        <item>Jubilee</item>
        <item>ICEA</item>
        <item>AAR</item>
        <item>AIG</item>
        <item>BRITAM GENERAL</item>
        <item>APA</item>
        <item>HERITAGE</item>

    </string-array>


</resources>
